--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,4 +1,4 @@
-<%= simple_form_for @task, remote: true do |f|   %>
+<%= simple_form_for @idea, remote: true do |f|   %>
   <%= f.input  :title, as: :text                 %>
   <%= f.input  :body,  as: :text                 %>
   <%= f.button :submit %>
