--- a/app/views/ideas/create.js.erb
+++ b/app/views/ideas/create.js.erb
@@ -1,2 +1,3 @@
-$('#ideas').html("<%= escape_javascript(render @ideas) %>");
+$('#tasks').html("<%= escape_javascript(render @ideas) %>");
+
 $('#idea-form').slideUp(350);
