--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -1,21 +1,20 @@
-<div class="container">
 
-  <div class="flash">
-    <h5>Please complete all fields!</h5>
+<div class="row">
+  <div class="col-md-5 col-md-offset-1">
+    <h2>Ideas</h2>
   </div>
 
-  <div id="search-field">
-    <form>
-      <h5>Search Ideas</h5><br>
-      <input type="text" id="filter" name="filter-input">
-    </form> <br>
+  <div class="col-md-2 col-md-offset-4">
+    <%= link_to new_idea_path, remote: true do %>
+      <button class="btn btn-default">New</button>
+    <% end %>
   </div>
+</div>
 
-  <div class="new-idea">
-    <h5> Enter a New Idea</h5> <br>
-    <div id="idea-form"></div> <br>
-  </div>
+<div class="row">
+  <div class="col-md-6 col-md-offset-2" id="idea-form" style="display:none;"></div>
+</div>
 
-  <div class="ideas">
-    <%= render @ideas %>
-  </div>
+<div class="row">
+  <div class="col-md-7 col-md-offset-1" id="ideas"><%= render @ideas %></div>
+</div>
