--- a/app/views/ideas/_form.html.erb
+++ b/app/views/ideas/_form.html.erb
@@ -1,5 +1,6 @@
-<%= simple_form_for @idea, remote: true do |f|   %>
-  <%= f.input  :title, as: :text                 %>
-  <%= f.input  :body,  as: :text                 %>
-  <%= f.button :submit %>
+<%= simple_form_for @idea, remote: true do |f| %>
+  <%= f.input  :title,   as: :text             %>
+  <%= f.input  :body,    as: :text             %>
+  <%= f.input  :quality, as: :text, placeholder: "swill" %>
+  <%= f.button :submit, value: "Save" %>
 <% end %>
