attempt to update quality code

--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -4,11 +4,11 @@
   <span class="bodyline">Body: <%= idea.body %></span><br>
   <span class="qualityline">Quality: <%= idea.quality %></span><br>
 
-  <%= link_to '#', remote:true do %>
+  <%= link_to 'quality', remote:true do %>
   <span class="glyphicon glyphicon-thumbs-up"></span>
   <% end  %>
 
-  <%= link_to '#', remote:true do  %>
+  <%= link_to 'quality', remote:true do  %>
   <span class="glyphicon glyphicon-thumbs-down"></span>
   <% end  %>
 
