--- a/app/views/ideas/index.html.erb
+++ b/app/views/ideas/index.html.erb
@@ -8,6 +8,9 @@
     <%= link_to new_idea_path, remote: true do %>
       <button class="btn btn-default">New</button>
     <% end %>
+    <%= link_to '#', remote: true do %>
+      <button class="btn btn-default">Search</button>
+    <% end %>
   </div>
 </div>
 
