--- a/app/views/ideas/create.js.erb
+++ b/app/views/ideas/create.js.erb
@@ -1,2 +1,2 @@
-$('#tasks').html("<%= escape_javascript(render @ideas)%>");
+$('#ideas').html("<%= escape_javascript(render @ideas)%>");
 $('#idea-form').slideUp(350);
