--- a/app/views/ideas/edit.js.erb
+++ b/app/views/ideas/edit.js.erb
@@ -1,2 +1,13 @@
 $('#idea-form').html("<%= escape_javascript(render 'form') %>");
 $('#idea-form').slideDown(350);
+
+
+// $('#idea23 .titleValue').on('click', function () {
+//   $(this).replaceWith('<textarea id="idea_title" name="idea[title]" class="text required"></textarea>');
+// });
+//
+// $('#idea23 .titleValue').on('focusout', function () {
+//   var current_val = $(this).val();
+//   $(this).replaceWith('<span class="titleValue">' + current_val +'</span>');
+//   alert('you left');
+// });
