--- a/app/views/ideas/_idea.html.erb
+++ b/app/views/ideas/_idea.html.erb
@@ -1,7 +1,7 @@
-<li class="list-group-item list-group-item-info" id="idea<%=idea.id%>">
-  <span class="titleLabel">Title:</span> <span class="titleValue"><%= idea.title %></span><br>
+<li class="list-group-item list-group-item-info" id="<%=idea.id%>">
+  <span class="titleLabel">Title:</span> <span class="titleValue" contenteditable="true"><%= idea.title %></span><br>
 
-  <span class="bodyLabel">Body:</span> <span class="bodyValue"><%= idea.body %></span><br>
+  <span class="bodyLabel">Body:</span> <span class="bodyValue" contenteditable="true"><%= idea.body %></span><br>
   <span class="qualityLabel">Quality:</span> <span class="qualityValue"><%= idea.quality %></span><br>
 
   <%= link_to upvote_path(idea), method: :put, remote:true do %>
